syntax = "proto3";

package rpcProtos;

service Status {
	rpc Heartbeat(Heartbeat2StatusReq) returns (Heartbeat2StatusRsp){}
	rpc SignIn(SignInReq) returns (SignInRsp){}
	rpc UpdateStatus(UpdateStatusReq) returns (UpdateStatusRsp){}
}

message Heartbeat2StatusReq{}
message Heartbeat2StatusRsp{}

message SignInReq{
	int32 uid=1;
}
message SignInRsp{
	int32 retCode=1;
	string desc=2;
	int32	signInCount = 3;
}

message UpdateStatusReq{
	int32 uid=1;
	int32 status=2;
}
message UpdateStatusRsp{
	int32 retCode=1;	//0成功；其他失败；
}
